// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NButton snapshots primary in light + dark: primary-dark 1`] = `
<View
  style={
    [
      {
        "alignSelf": "auto",
        "opacity": 1,
      },
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#000000",
            "borderRadius": 18,
          },
          {
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          },
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 44,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 18,
            },
            {
              "shadowColor": "#1F1F1F",
              "shadowOffset": {
                "height": -4,
                "width": -4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#F2F2F7",
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Save
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`NButton snapshots primary in light + dark: primary-light 1`] = `
<View
  style={
    [
      {
        "alignSelf": "auto",
        "opacity": 1,
      },
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 18,
          },
          {
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          },
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 44,
              "paddingHorizontal": 20,
              "paddingVertical": 12,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 18,
            },
            {
              "shadowColor": "#FFFFFF",
              "shadowOffset": {
                "height": -4,
                "width": -4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#1C1C1E",
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          Save
        </Text>
      </View>
    </View>
  </View>
</View>
`;
